$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2008-07-05 [A] API picture uploads are now possible.  Note that I added "if (!defined('API_CALL'))" in a few places {daorange}
2008-07-05 [A] Crop and Rotate (pic_editor.php) now uses the storage modules
2008-07-04 [B] Decommented code previously commented by Sameera
2008-06-24 [M] Updates to the oauth/ folder, /oauth_register.php added {daorange}
2008-06-17 [M] Continued work on the oauth/ folder, mostly authorize.php {daorange}
2008-05-16 [A] Alpha version of the storage plugin, FTP storage module {zmarty}
2008-06-05 [A] Added oauth/ directory, an early version of code for Coppermine API authentication {daorange}
2008-05-26 [D] Created sub-folders in docs folder to prepare translation of documentation {GauGau}
2008-05-23 [O] Use JavaScript to display the sorting options only to humans, but hide them from search engines to avoid double-content indexing {GauGau}
2008-05-21 [B] Replaced hard-coded string "edit keywords" with translation (thread ID 52721) {GauGau}
2008-05-04 [B] Fixed resources consumption for slideshows in meta albums {GauGau}
2008-05-03 [B] Fixing the type being translated in reports {GauGau}
2008-05-01 [O] Optimization of sanitization of strip-Tags and max. length for comments {GauGau}
2008-04-30 [C] Removed invalid <f>-tag in upload.php {GauGau}
2008-04-30 [C] Fixing improper nesting of form-tag in various files {GauGau}
2008-04-28 [C] Fixing spacer for empty album list cells (thread ID 51414) {GauGau}
2008-04-14 [O] Numerous session handling optimizations {Nibbler}
2008-04-13 [S] Corrected SQL injection vulnerabilities in session handling code {Nibbler}